--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.13"
+    "@tailwindcss/vite": "^4.1.7",
+    "astro": "^5.7.13",
+    "npm": "^11.4.0",
+    "tailwindcss": "^4.1.7"
   }
 }
